# bday-attack

./: .gitignore  Cargo.toml  README.md  download_files.py  fake_forged_len15.txt  real_forged_len15.txt  test.py  test.sh
src/: confession_fake.txt  constants.rs  disk_hash_map.rs  hash.rs  hash_disk_array.rs  hash_gen.rs  main.rs  progress_updater.rs  sha.rs
src/old/: hash_disk_array.rs
