[package]
edition = "2021"
name = "bday"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
libc = "0.2.150"
ring = "0.17.5"
rustc-hash = "1.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
